--- a/src/components/Props/props.css
+++ b/src/components/Props/props.css
@@ -1,1 +1,83 @@
-*{background-color: rebeccapurple;}
+.app{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+    background: linear-gradient(blue, pink);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.parents{
+    background-color: rgba(0, 0, 0, 0.795);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 1%;
+    color: rgba(255, 255, 255, 0.432);
+  
+
+
+
+    
+}
+
+.grand-child{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content:space-around;
+    gap: 1rem;
+
+    
+
+}
+
+.apple-tree{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 50%;
+    font-size: 3rem;
+}
+
+.apple{
+    color: rgb(134, 2, 2);
+    border: solid;
+    border-radius: 10%;
+    background-color: rgba(240, 248, 255, 0.048);
+
+}
+
+.tree{
+    color: rgb(7, 59, 6);
+    border: solid;
+    border-radius: 10%;
+    background-color: rgba(240, 248, 255, 0.048);
+
+}
+
+
+
+.bike{
+    color: rgba(23, 9, 102, 0.863);
+    border: solid;
+    border-radius: 10%;
+    font-size: 2.5rem;
+    background-color: rgba(240, 248, 255, 0.048);
+
+
+}
+
+.apple-tree-text{
+    padding: 1rem;
+    margin-top: 1rem;
+    font-size: 1rem;
+}
